--- a/styles/style.css
+++ b/styles/style.css
@@ -221,6 +221,10 @@ h2 {
 	color: #fff;
 }
 
+h5 {
+	color: royalblue;
+}
+
 .game p {
 	margin-top: 0.5em;
 	font-size: 1.8em;
@@ -319,4 +323,8 @@ ul.guessBox li {
 	width: 95%;
 	margin: 0.2em;
 	color: #fff;
+}
+
+#sig {
+	height: 50px;
 }
